tests/baselines/reference/decoratorOnClassProperty11.errors.txt
tests/cases/conformance/decorators/class/property/decoratorOnClassProperty11.ts(4,5): error TS1220: Invalid expression for property decorator.
  Supplied parameters do not match any signature of call target.


==== tests/cases/conformance/decorators/class/property/decoratorOnClassProperty11.ts (1 errors) ====
    declare function dec(): <T>(target: any, propertyKey: string) => void;
    
    class C {
        @dec prop;
        ~~~~
!!! error TS1220: Invalid expression for property decorator.
!!! error TS1220:   Supplied parameters do not match any signature of call target.
    }